--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,13 @@
-Package: YOUR_PACKAGE_NAME
-Title: WHAT DATA YOU ARE PULLING
+Package: covid19tunisia
+Title: Cases of COVID-19 in Tunisia
 Version: 0.1.0
 Authors@R: 
-    person(given = "FIRST NAME",
-           family = "LAST NAME",
+    person(given = "Mouna",
+           family = "Belaid",
            role = c("aut", "cre"),
-           email = "EMAIL",
-           comment = c(ORCID = "ADD ONE OR DELETE COMMENT"))
-Description: IN DEPTH DESCRIPTION WITH LINK TO ORIGINAL DATA
-License: file LICENSE
-URL: LINK TO PKGDOWN OR GITHUB REPO
-BugReports: LINK TO REPO ISSUES
+           email = "belaid.mounaa@gmail.com")
+Description: Data personnally collected about the spread of covid-19 (SARS-COV-2) in Tunisia.
+License: MIT + file LICENSE
 Depends:
     R (>= 3.0.2)
 VignetteBuilder: 
@@ -20,5 +17,10 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    magrittr,
-    tibble
+    dplyr (>= 0.8.5),
+    glue (>= 1.3.2),
+    lubridate (>= 1.7.4),
+    magrittr (>= 1.5),
+    readr (>= 1.3.1),
+    stringr (>= 1.4.0),
+    tidyr (>= 1.0.2)
