--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,11 @@
-^covid19tunisia\.Rproj$
+^.*\.Rproj$
 ^\.Rproj\.user$
+^data-raw$
 ^LICENSE\.md$
 ^README\.Rmd$
-^cran-comments\.md$
-^\.github$
-^CODE_OF_CONDUCT\.md$
-^data-raw$
-^docs$
-setupcode.R
-testcode.R
 ^\.travis\.yml$
+^CODE_OF_CONDUCT\.md$
+^cran-comments\.md$
 ^CRAN-RELEASE$
+
+
