--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,22 +6,21 @@ Authors@R:
            family = "Belaid",
            role = c("aut", "cre"),
            email = "belaid.mounaa@gmail.com")
-Description: Data personnally collected about the spread of covid-19 (SARS-COV-2) in Tunisia.
-<https://github.com/MounaBelaid/covid19datatunisia> data on COVID-19 in France
-URL: LINK TO PKGDOWN OR GITHUB REPO
+Description: Data personnally collected about the spread of COVID-19 (SARS-COV-2) in Tunisia.
+<https://github.com/MounaBelaid/covid19datatunisia>
 License: MIT + file LICENSE
-Depends:
-    R (>= 3.0.2)
-VignetteBuilder: 
-    knitr
-Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
-Imports: 
+Depends: 
+    R (>= 2.10)
+Imports:
     dplyr (>= 0.8.5),
     glue (>= 1.3.2),
     lubridate (>= 1.7.4),
+    magrittr (>= 1.5),
     readr (>= 1.3.1),
     stringr (>= 1.4.0),
     tidyr (>= 1.0.2)
+Suggests: 
+    testthat (>= 2.3.1)
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 7.1.0
